--- a/package.json
+++ b/package.json
@@ -39,27 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.16.48",
-    "@abtnode/util": "^1.16.48",
-    "@aigne/aigne-hub": "^0.8.7",
-    "@arcblock/did": "^1.23.0",
-    "@arcblock/did-connect-js": "^1.23.0",
-    "@arcblock/did-connect-react": "^3.1.28",
+    "@abtnode/cron": "^1.16.51",
+    "@abtnode/util": "^1.16.51",
+    "@aigne/aigne-hub": "^0.9.0",
+    "@aigne/core": "^1.59.0",
+    "@arcblock/did": "^1.24.8",
+    "@arcblock/did-connect-js": "^1.24.8",
+    "@arcblock/did-connect-react": "^3.1.37",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/ux": "^3.1.28",
-    "@arcblock/ws": "^1.23.0",
-    "@blocklet/ai-runtime": "^0.5.13",
-    "@blocklet/aigne-sdk": "^0.5.13",
-    "@blocklet/discuss-kit": "^2.4.53",
-    "@blocklet/discuss-kit-post": "^2.4.53",
+    "@arcblock/ux": "^3.1.37",
+    "@arcblock/ws": "^1.24.8",
+    "@blocklet/ai-runtime": "^0.5.19",
+    "@blocklet/aigne-sdk": "^0.5.19",
+    "@blocklet/discuss-kit": "^2.4.85",
+    "@blocklet/discuss-kit-post": "^2.4.85",
     "@blocklet/embed": "^0.2.5",
-    "@blocklet/js-sdk": "^1.16.48",
-    "@blocklet/logger": "^1.16.48",
-    "@blocklet/payment-js": "^1.20.4",
-    "@blocklet/sdk": "^1.16.48",
-    "@blocklet/ui-react": "^3.1.28",
-    "@blocklet/uploader": "^0.2.7",
-    "@blocklet/xss": "^0.2.5",
+    "@blocklet/js-sdk": "^1.16.51",
+    "@blocklet/logger": "^1.16.51",
+    "@blocklet/payment-js": "^1.20.5",
+    "@blocklet/sdk": "^1.16.51",
+    "@blocklet/ui-react": "^3.1.37",
+    "@blocklet/uploader": "^0.2.10",
+    "@blocklet/xss": "^0.2.7",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -72,10 +73,10 @@
     "@mui/system": "^7.2.0",
     "@mui/x-charts": "^8.6.0",
     "@mui/x-date-pickers": "8.6.0",
-    "@ocap/client": "^1.23.0",
-    "@ocap/mcrypto": "^1.23.0",
-    "@ocap/util": "^1.23.0",
-    "@ocap/wallet": "^1.23.0",
+    "@ocap/client": "^1.24.8",
+    "@ocap/mcrypto": "^1.24.8",
+    "@ocap/util": "^1.24.8",
+    "@ocap/wallet": "^1.24.8",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -173,9 +174,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.1.28",
-    "@blocklet/code-editor": "^0.5.13",
-    "@blocklet/ui-react": "^3.1.28",
+    "@arcblock/ux": "^3.1.37",
+    "@blocklet/code-editor": "^0.5.19",
+    "@blocklet/ui-react": "^3.1.37",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
   },
