--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "node scripts/build-clean.mjs",
     "bundle": "tsc --noEmit && npm run bundle:client && npm run bundle:api",
     "bundle:client": "NODE_OPTIONS=--max_old_space_size=6144 vite build",
-    "bundle:api": "npm run clean && tsc -p tsconfig.api.json && blocklet bundle --compact --create-release",
+    "bundle:api": "npm run clean && tsc -p tsconfig.api.json && blocklet bundle --compact --create-release --external @aigne/sqlite",
     "deploy": "npm run bundle && blocklet deploy .blocklet/bundle",
     "upload": "npm run bundle && blocklet upload .blocklet/release/blocklet.json",
     "prepare": "npx simple-git-hooks",
@@ -41,25 +41,24 @@
   "dependencies": {
     "@abtnode/cron": "^1.16.51",
     "@abtnode/util": "^1.16.51",
-    "@aigne/aigne-hub": "^0.9.0",
-    "@aigne/core": "^1.59.0",
-    "@arcblock/did": "^1.24.8",
-    "@arcblock/did-connect-js": "^1.24.8",
-    "@arcblock/did-connect-react": "^3.1.37",
+    "@aigne/aigne-hub": "^0.9.3",
+    "@aigne/core": "^1.60.2",
+    "@arcblock/did": "^1.24.9",
+    "@arcblock/did-connect-js": "^1.24.9",
+    "@arcblock/did-connect-react": "^3.1.38",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/ux": "^3.1.37",
-    "@arcblock/ws": "^1.24.8",
+    "@arcblock/ux": "^3.1.38",
+    "@arcblock/ws": "^1.24.9",
     "@blocklet/ai-runtime": "^0.5.19",
     "@blocklet/aigne-sdk": "^0.5.19",
-    "@blocklet/discuss-kit": "^2.4.85",
-    "@blocklet/discuss-kit-post": "^2.4.85",
     "@blocklet/embed": "^0.2.5",
     "@blocklet/js-sdk": "^1.16.51",
     "@blocklet/logger": "^1.16.51",
-    "@blocklet/payment-js": "^1.20.5",
+    "@blocklet/payment-js": "^1.20.7",
     "@blocklet/sdk": "^1.16.51",
-    "@blocklet/ui-react": "^3.1.37",
+    "@blocklet/ui-react": "^3.1.38",
     "@blocklet/uploader": "^0.2.10",
+    "@blocklet/uploader-server": "^0.2.10",
     "@blocklet/xss": "^0.2.7",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -71,12 +70,10 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@mui/x-charts": "^8.6.0",
-    "@mui/x-date-pickers": "8.6.0",
-    "@ocap/client": "^1.24.8",
-    "@ocap/mcrypto": "^1.24.8",
-    "@ocap/util": "^1.24.8",
-    "@ocap/wallet": "^1.24.8",
+    "@ocap/client": "^1.24.9",
+    "@ocap/mcrypto": "^1.24.9",
+    "@ocap/util": "^1.24.9",
+    "@ocap/wallet": "^1.24.9",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -174,9 +171,10 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.1.37",
+    "@arcblock/ux": "^3.1.38",
     "@blocklet/code-editor": "^0.5.19",
-    "@blocklet/ui-react": "^3.1.37",
+    "@types/d3-dispatch": "3.0.6",
+    "@blocklet/ui-react": "^3.1.38",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
   },
