--- a/blocklet.yml
+++ b/blocklet.yml
@@ -1,5 +1,5 @@
 title: PixLoom
-description: a base ai image service for image apps
+description: a base ai image service for create ai image apps
 keywords:
   - blocklet
   - react
