--- a/blocklet.yml
+++ b/blocklet.yml
@@ -51,5 +51,28 @@ capabilities:
 screenshots:
   - f45aa844d2aff0447810a4bf58f2a235.png
 components: []
+navigation:
+  - id: pixLoomAdmin
+    title:
+      en: Dashboard
+      zh: 管理后台
+    icon: ic:outline-dashboard
+    link: /admin
+    section:
+      - dashboard
+    role:
+      - owner
+      - admin
+  - id: pixLoomProjects
+    title:
+      en: Projects
+      zh: 项目管理
+    icon: ic:outline-folder-special
+    link: /admin/projects
+    section:
+      - dashboard
+    role:
+      - owner
+      - admin
 name: z2qaJJC9zbsHpCjZW2XTT7StPFY3MvTumVoXY
 egress: true
