--- a/blocklet.yml
+++ b/blocklet.yml
@@ -1,4 +1,4 @@
-title: PixLoom
+title: ImageSmith
 description: a base ai image service for create ai image apps
 keywords:
   - blocklet
@@ -13,14 +13,14 @@ repository:
   type: git
   url: git+https://github.com/blocklet/create-blocklet.git
 specVersion: 1.2.8
-version: 0.0.2
-logo: logo.png
+version: 0.0.3
+logo: logo.svg
 files:
   - dist
-  - logo.png
   - screenshots
   - api/hooks/pre-start.js
   - api/dist/store/migrations/*.js
+  - logo.svg
 interfaces:
   - type: web
     name: publicUrl
