--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.0.9",
+  "version": "0.0.10",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -41,8 +41,8 @@
   "dependencies": {
     "@abtnode/cron": "^1.16.51",
     "@abtnode/util": "^1.16.51",
-    "@aigne/aigne-hub": "^0.9.6",
-    "@aigne/core": "^1.60.3",
+    "@aigne/aigne-hub": "^0.10.0-beta.2",
+    "@aigne/core": "^1.61.0-beta.1",
     "@arcblock/did": "^1.25.2",
     "@arcblock/did-connect-js": "^1.25.2",
     "@arcblock/did-connect-react": "^3.1.41",
