fix: update pacakge

--- a/package.json
+++ b/package.json
@@ -39,28 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.16.52",
-    "@abtnode/util": "^1.16.52",
-    "@aigne/aigne-hub": "^0.10.1",
-    "@aigne/core": "^1.62.0",
-    "@arcblock/did": "^1.26.0",
-    "@arcblock/did-connect-js": "^1.26.0",
-    "@arcblock/did-connect-react": "^3.1.47",
+    "@abtnode/cron": "^1.16.54-beta-20251021-070951-25e3083c",
+    "@abtnode/util": "^1.16.54-beta-20251021-070951-25e3083c",
+    "@aigne/aigne-hub": "^0.10.3-beta",
+    "@aigne/core": "^1.64.0-beta",
+    "@arcblock/did": "^1.26.2",
+    "@arcblock/did-connect-js": "^1.26.2",
+    "@arcblock/did-connect-react": "^3.1.51",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.1.47",
-    "@arcblock/ux": "^3.1.47",
-    "@arcblock/ws": "^1.26.0",
-    "@blocklet/ai-runtime": "^0.5.23",
-    "@blocklet/aigne-sdk": "^0.5.23",
+    "@arcblock/react-hooks": "^3.1.51",
+    "@arcblock/ux": "^3.1.51",
+    "@arcblock/ws": "^1.26.2",
+    "@blocklet/ai-runtime": "^0.5.26",
+    "@blocklet/aigne-sdk": "^0.5.26",
     "@blocklet/embed": "^0.2.5",
-    "@blocklet/js-sdk": "^1.16.52",
-    "@blocklet/logger": "^1.16.52",
-    "@blocklet/payment-js": "^1.21.8",
-    "@blocklet/sdk": "^1.16.52",
-    "@blocklet/ui-react": "^3.1.47",
-    "@blocklet/uploader": "^0.2.13",
-    "@blocklet/uploader-server": "^0.2.13",
-    "@blocklet/xss": "^0.2.10",
+    "@blocklet/js-sdk": "^1.16.54-beta-20251021-070951-25e3083c",
+    "@blocklet/logger": "^1.16.54-beta-20251021-070951-25e3083c",
+    "@blocklet/payment-js": "^1.21.17",
+    "@blocklet/sdk": "^1.16.54-beta-20251021-070951-25e3083c",
+    "@blocklet/ui-react": "^3.1.51",
+    "@blocklet/uploader": "^0.2.15",
+    "@blocklet/uploader-server": "^0.2.15",
+    "@blocklet/xss": "^0.2.12",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -71,10 +71,10 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.26.0",
-    "@ocap/mcrypto": "^1.26.0",
-    "@ocap/util": "^1.26.0",
-    "@ocap/wallet": "^1.26.0",
+    "@ocap/client": "^1.26.2",
+    "@ocap/mcrypto": "^1.26.2",
+    "@ocap/util": "^1.26.2",
+    "@ocap/wallet": "^1.26.2",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -172,9 +172,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.1.47",
-    "@blocklet/code-editor": "^0.5.23",
-    "@blocklet/ui-react": "^3.1.47",
+    "@arcblock/ux": "^3.1.51",
+    "@blocklet/code-editor": "^0.5.26",
+    "@blocklet/ui-react": "^3.1.51",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
