chore: code review

--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
   "dependencies": {
     "@abtnode/cron": "^1.16.54-beta-20251021-070951-25e3083c",
     "@abtnode/util": "^1.16.54-beta-20251021-070951-25e3083c",
-    "@aigne/aigne-hub": "^0.10.3-beta",
-    "@aigne/core": "^1.64.0-beta",
-    "@arcblock/did": "^1.26.2",
-    "@arcblock/did-connect-js": "^1.26.2",
+    "@aigne/aigne-hub": "^0.10.3",
+    "@aigne/core": "^1.64.0",
+    "@arcblock/did": "^1.26.3",
+    "@arcblock/did-connect-js": "^1.26.3",
     "@arcblock/did-connect-react": "^3.1.51",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
     "@arcblock/react-hooks": "^3.1.51",
     "@arcblock/ux": "^3.1.51",
-    "@arcblock/ws": "^1.26.2",
+    "@arcblock/ws": "^1.26.3",
     "@blocklet/ai-runtime": "^0.5.26",
     "@blocklet/aigne-sdk": "^0.5.26",
     "@blocklet/embed": "^0.2.5",
@@ -71,9 +71,9 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.26.2",
-    "@ocap/mcrypto": "^1.26.2",
-    "@ocap/util": "^1.26.2",
+    "@ocap/client": "^1.26.3",
+    "@ocap/mcrypto": "^1.26.3",
+    "@ocap/util": "^1.26.3",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
