--- a/package.json
+++ b/package.json
@@ -39,28 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.16.54-beta-20251021-070951-25e3083c",
-    "@abtnode/util": "^1.16.54-beta-20251021-070951-25e3083c",
-    "@aigne/aigne-hub": "^0.10.3",
-    "@aigne/core": "^1.64.0",
+    "@abtnode/cron": "^1.16.54-beta-20251027-105624-dfa978f8",
+    "@abtnode/util": "^1.16.54-beta-20251027-105624-dfa978f8",
+    "@aigne/aigne-hub": "^0.10.4-beta.5",
+    "@aigne/core": "^1.65.0-beta.2",
     "@arcblock/did": "^1.26.3",
     "@arcblock/did-connect-js": "^1.26.3",
-    "@arcblock/did-connect-react": "^3.1.51",
+    "@arcblock/did-connect-react": "^3.1.52",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.1.51",
-    "@arcblock/ux": "^3.1.51",
+    "@arcblock/react-hooks": "^3.1.52",
+    "@arcblock/ux": "^3.1.52",
     "@arcblock/ws": "^1.26.3",
     "@blocklet/ai-runtime": "^0.5.26",
     "@blocklet/aigne-sdk": "^0.5.26",
     "@blocklet/embed": "^0.2.5",
-    "@blocklet/js-sdk": "^1.16.54-beta-20251021-070951-25e3083c",
-    "@blocklet/logger": "^1.16.54-beta-20251021-070951-25e3083c",
+    "@blocklet/js-sdk": "^1.16.54-beta-20251027-105624-dfa978f8",
+    "@blocklet/logger": "^1.16.54-beta-20251027-105624-dfa978f8",
     "@blocklet/payment-js": "^1.21.17",
-    "@blocklet/sdk": "^1.16.54-beta-20251021-070951-25e3083c",
-    "@blocklet/ui-react": "^3.1.51",
-    "@blocklet/uploader": "^0.2.15",
-    "@blocklet/uploader-server": "^0.2.15",
-    "@blocklet/xss": "^0.2.12",
+    "@blocklet/sdk": "^1.16.54-beta-20251027-105624-dfa978f8",
+    "@blocklet/ui-react": "^3.1.52",
+    "@blocklet/uploader": "^0.3.0",
+    "@blocklet/uploader-server": "^0.3.0",
+    "@blocklet/xss": "^0.3.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -171,9 +171,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.1.51",
+    "@arcblock/ux": "^3.1.52",
     "@blocklet/code-editor": "^0.5.26",
-    "@blocklet/ui-react": "^3.1.51",
+    "@blocklet/ui-react": "^3.1.52",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
