--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.0.13",
+  "version": "0.0.14",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -39,28 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.16.51",
-    "@abtnode/util": "^1.16.51",
-    "@aigne/aigne-hub": "^0.10.0-beta.3",
-    "@aigne/core": "^1.61.0-beta.2",
-    "@arcblock/did": "^1.25.2",
-    "@arcblock/did-connect-js": "^1.25.2",
-    "@arcblock/did-connect-react": "^3.1.41",
+    "@abtnode/cron": "^1.17.0-beta-20251104-112713-e947b159",
+    "@abtnode/util": "^1.17.0-beta-20251104-112713-e947b159",
+    "@aigne/aigne-hub": "^0.10.5-beta.1",
+    "@aigne/core": "^1.65.1-beta.1",
+    "@arcblock/did": "^1.27.2",
+    "@arcblock/did-connect-js": "^1.27.2",
+    "@arcblock/did-connect-react": "^3.1.54",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.1.41",
-    "@arcblock/ux": "^3.1.41",
-    "@arcblock/ws": "^1.25.2",
-    "@blocklet/ai-runtime": "^0.5.20",
-    "@blocklet/aigne-sdk": "^0.5.20",
-    "@blocklet/embed": "^0.2.5",
-    "@blocklet/js-sdk": "^1.16.51",
-    "@blocklet/logger": "^1.16.51",
-    "@blocklet/payment-js": "^1.20.14",
-    "@blocklet/sdk": "^1.16.51",
-    "@blocklet/ui-react": "^3.1.41",
-    "@blocklet/uploader": "^0.2.11",
-    "@blocklet/uploader-server": "^0.2.11",
-    "@blocklet/xss": "^0.2.7",
+    "@arcblock/react-hooks": "^3.1.54",
+    "@arcblock/ux": "^3.1.54",
+    "@arcblock/ws": "^1.27.2",
+    "@blocklet/ai-runtime": "^0.6.1",
+    "@blocklet/aigne-sdk": "^0.6.1",
+    "@blocklet/embed": "^0.3.0",
+    "@blocklet/js-sdk": "^1.17.0-beta-20251104-112713-e947b159",
+    "@blocklet/logger": "^1.17.0-beta-20251104-112713-e947b159",
+    "@blocklet/payment-js": "^1.22.3",
+    "@blocklet/sdk": "^1.17.0-beta-20251104-112713-e947b159",
+    "@blocklet/ui-react": "^3.1.54",
+    "@blocklet/uploader": "^0.3.4",
+    "@blocklet/uploader-server": "^0.3.4",
+    "@blocklet/xss": "^0.3.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -71,10 +71,10 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.25.2",
-    "@ocap/mcrypto": "^1.25.2",
-    "@ocap/util": "^1.25.2",
-    "@ocap/wallet": "^1.25.2",
+    "@ocap/client": "^1.27.2",
+    "@ocap/mcrypto": "^1.27.2",
+    "@ocap/util": "^1.27.2",
+    "@ocap/wallet": "^1.27.2",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -154,7 +154,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^7.0.0",
-    "vite-plugin-blocklet": "^0.11.1",
+    "vite-plugin-blocklet": "^0.12.1",
     "vite-plugin-svgr": "^4.3.0",
     "zx": "^7.2.3"
   },
@@ -172,9 +172,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.1.41",
-    "@blocklet/code-editor": "^0.5.20",
-    "@blocklet/ui-react": "^3.1.41",
+    "@arcblock/ux": "^3.1.54",
+    "@blocklet/code-editor": "^0.6.1",
+    "@blocklet/ui-react": "^3.1.54",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
