--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.3",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -39,28 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.17.0-beta-20251104-112713-e947b159",
-    "@abtnode/util": "^1.17.0-beta-20251104-112713-e947b159",
+    "@abtnode/cron": "^1.17.0",
+    "@abtnode/util": "^1.17.0",
     "@aigne/aigne-hub": "^0.10.5-beta.1",
     "@aigne/core": "^1.65.1-beta.1",
     "@arcblock/did": "^1.27.2",
     "@arcblock/did-connect-js": "^1.27.2",
-    "@arcblock/did-connect-react": "^3.1.54",
+    "@arcblock/did-connect-react": "^3.2.0",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.1.54",
-    "@arcblock/ux": "^3.1.54",
+    "@arcblock/react-hooks": "^3.2.0",
+    "@arcblock/ux": "^3.2.0",
     "@arcblock/ws": "^1.27.2",
-    "@blocklet/ai-runtime": "^0.6.1",
-    "@blocklet/aigne-sdk": "^0.6.1",
-    "@blocklet/embed": "^0.3.0",
-    "@blocklet/js-sdk": "^1.17.0-beta-20251104-112713-e947b159",
-    "@blocklet/logger": "^1.17.0-beta-20251104-112713-e947b159",
-    "@blocklet/payment-js": "^1.22.3",
-    "@blocklet/sdk": "^1.17.0-beta-20251104-112713-e947b159",
-    "@blocklet/ui-react": "^3.1.54",
-    "@blocklet/uploader": "^0.3.3",
-    "@blocklet/uploader-server": "^0.3.3",
-    "@blocklet/xss": "^0.3.3",
+    "@blocklet/ai-runtime": "^0.6.3",
+    "@blocklet/aigne-sdk": "^0.6.3",
+    "@blocklet/embed": "^0.3.1",
+    "@blocklet/js-sdk": "^1.17.0",
+    "@blocklet/logger": "^1.17.0",
+    "@blocklet/payment-js": "^1.22.8",
+    "@blocklet/sdk": "^1.17.0",
+    "@blocklet/ui-react": "^3.2.0",
+    "@blocklet/uploader": "^0.3.7",
+    "@blocklet/uploader-server": "^0.3.7",
+    "@blocklet/xss": "^0.3.6",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -153,7 +153,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^7.0.0",
-    "vite-plugin-blocklet": "^0.12.0",
+    "vite-plugin-blocklet": "^0.12.1",
     "vite-plugin-svgr": "^4.3.0",
     "zx": "^7.2.3"
   },
@@ -171,9 +171,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.1.54",
-    "@blocklet/code-editor": "^0.6.1",
-    "@blocklet/ui-react": "^3.1.54",
+    "@arcblock/ux": "^3.2.0",
+    "@blocklet/code-editor": "^0.6.3",
+    "@blocklet/ui-react": "^3.2.0",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
