--- a/package.json
+++ b/package.json
@@ -39,28 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.17.1",
-    "@abtnode/util": "^1.17.1",
-    "@aigne/aigne-hub": "^0.10.5",
-    "@aigne/core": "^1.66.0",
-    "@arcblock/did": "^1.27.4",
-    "@arcblock/did-connect-js": "^1.27.4",
-    "@arcblock/did-connect-react": "^3.2.2",
+    "@abtnode/cron": "^1.17.2",
+    "@abtnode/util": "^1.17.2",
+    "@aigne/aigne-hub": "^0.10.7-beta",
+    "@aigne/core": "^1.68.0-beta",
+    "@arcblock/did": "^1.27.6",
+    "@arcblock/did-connect-js": "^1.27.6",
+    "@arcblock/did-connect-react": "^3.2.6",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.2.2",
-    "@arcblock/ux": "^3.2.2",
-    "@arcblock/ws": "^1.27.4",
-    "@blocklet/ai-runtime": "^0.7.0",
-    "@blocklet/aigne-sdk": "^0.7.0",
+    "@arcblock/react-hooks": "^3.2.6",
+    "@arcblock/ux": "^3.2.6",
+    "@arcblock/ws": "^1.27.6",
+    "@blocklet/ai-runtime": "^0.7.3",
+    "@blocklet/aigne-sdk": "^0.7.3",
     "@blocklet/embed": "^0.3.2",
-    "@blocklet/js-sdk": "^1.17.1",
-    "@blocklet/logger": "^1.17.1",
-    "@blocklet/payment-js": "^1.22.9",
-    "@blocklet/sdk": "^1.17.1",
-    "@blocklet/ui-react": "^3.2.2",
-    "@blocklet/uploader": "^0.3.8",
-    "@blocklet/uploader-server": "^0.3.8",
-    "@blocklet/xss": "^0.3.6",
+    "@blocklet/js-sdk": "^1.17.2",
+    "@blocklet/logger": "^1.17.2",
+    "@blocklet/payment-js": "^1.22.13",
+    "@blocklet/sdk": "^1.17.2",
+    "@blocklet/ui-react": "^3.2.6",
+    "@blocklet/uploader": "^0.3.11",
+    "@blocklet/uploader-server": "^0.3.11",
+    "@blocklet/xss": "^0.3.9",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -71,9 +71,9 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.27.4",
-    "@ocap/mcrypto": "^1.27.4",
-    "@ocap/util": "^1.27.4",
+    "@ocap/client": "^1.27.6",
+    "@ocap/mcrypto": "^1.27.6",
+    "@ocap/util": "^1.27.6",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -171,9 +171,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.2.2",
-    "@blocklet/code-editor": "^0.7.0",
-    "@blocklet/ui-react": "^3.2.2",
+    "@arcblock/ux": "^3.2.6",
+    "@blocklet/code-editor": "^0.7.3",
+    "@blocklet/ui-react": "^3.2.6",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
