chore: update deps

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   "dependencies": {
     "@abtnode/cron": "^1.17.2",
     "@abtnode/util": "^1.17.2",
-    "@aigne/aigne-hub": "^0.10.7-beta",
-    "@aigne/core": "^1.68.0-beta",
+    "@aigne/aigne-hub": "^0.10.7",
+    "@aigne/core": "^1.68.0",
     "@arcblock/did": "^1.27.6",
     "@arcblock/did-connect-js": "^1.27.6",
     "@arcblock/did-connect-react": "^3.2.6",
@@ -50,8 +50,8 @@
     "@arcblock/react-hooks": "^3.2.6",
     "@arcblock/ux": "^3.2.6",
     "@arcblock/ws": "^1.27.6",
-    "@blocklet/ai-runtime": "^0.7.3",
-    "@blocklet/aigne-sdk": "^0.7.3",
+    "@blocklet/ai-runtime": "^0.7.4",
+    "@blocklet/aigne-sdk": "^0.7.4",
     "@blocklet/embed": "^0.3.2",
     "@blocklet/js-sdk": "^1.17.2",
     "@blocklet/logger": "^1.17.2",
@@ -172,7 +172,7 @@
   },
   "resolutions": {
     "@arcblock/ux": "^3.2.6",
-    "@blocklet/code-editor": "^0.7.3",
+    "@blocklet/code-editor": "^0.7.4",
     "@blocklet/ui-react": "^3.2.6",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
