--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.1.6",
+  "version": "0.1.7",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -39,24 +39,24 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.17.3",
-    "@abtnode/util": "^1.17.3",
-    "@aigne/aigne-hub": "^0.10.12-beta",
-    "@aigne/core": "^1.69.2-beta",
-    "@arcblock/did": "^1.27.12",
-    "@arcblock/did-connect-js": "^1.27.12",
+    "@abtnode/cron": "^1.17.4-beta-20251204-152224-243ff54f",
+    "@abtnode/util": "^1.17.4-beta-20251204-152224-243ff54f",
+    "@aigne/aigne-hub": "^0.10.13-beta",
+    "@aigne/core": "^1.70.0-beta",
+    "@arcblock/did": "^1.27.14",
+    "@arcblock/did-connect-js": "^1.27.14",
     "@arcblock/did-connect-react": "^3.2.11",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
     "@arcblock/react-hooks": "^3.2.11",
     "@arcblock/ux": "^3.2.11",
-    "@arcblock/ws": "^1.27.12",
-    "@blocklet/ai-runtime": "^0.7.7",
-    "@blocklet/aigne-sdk": "^0.7.7",
-    "@blocklet/embed": "^0.3.3",
-    "@blocklet/js-sdk": "^1.17.3",
-    "@blocklet/logger": "^1.17.3",
-    "@blocklet/payment-js": "^1.22.25",
-    "@blocklet/sdk": "^1.17.3",
+    "@arcblock/ws": "^1.27.14",
+    "@blocklet/ai-runtime": "^0.7.8",
+    "@blocklet/aigne-sdk": "^0.7.8",
+    "@blocklet/embed": "^0.3.4",
+    "@blocklet/js-sdk": "^1.17.4-beta-20251204-152224-243ff54f",
+    "@blocklet/logger": "^1.17.4-beta-20251204-152224-243ff54f",
+    "@blocklet/payment-js": "^1.22.29",
+    "@blocklet/sdk": "^1.17.4-beta-20251204-152224-243ff54f",
     "@blocklet/ui-react": "^3.2.11",
     "@blocklet/uploader": "^0.3.13",
     "@blocklet/uploader-server": "^0.3.13",
@@ -71,9 +71,9 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.27.12",
-    "@ocap/mcrypto": "^1.27.12",
-    "@ocap/util": "^1.27.12",
+    "@ocap/client": "^1.27.14",
+    "@ocap/mcrypto": "^1.27.14",
+    "@ocap/util": "^1.27.14",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -153,7 +153,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^7.0.0",
-    "vite-plugin-blocklet": "^0.12.3",
+    "vite-plugin-blocklet": "^0.12.4",
     "vite-plugin-svgr": "^4.3.0",
     "zx": "^7.2.3"
   },
@@ -172,7 +172,7 @@
   },
   "resolutions": {
     "@arcblock/ux": "^3.2.11",
-    "@blocklet/code-editor": "^0.7.7",
+    "@blocklet/code-editor": "^0.7.8",
     "@blocklet/ui-react": "^3.2.11",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
