--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.1.7",
+  "version": "0.1.8",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -39,28 +39,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.17.4-beta-20251204-152224-243ff54f",
-    "@abtnode/util": "^1.17.4-beta-20251204-152224-243ff54f",
-    "@aigne/aigne-hub": "^0.10.13-beta",
-    "@aigne/core": "^1.70.0-beta",
-    "@arcblock/did": "^1.27.14",
-    "@arcblock/did-connect-js": "^1.27.14",
-    "@arcblock/did-connect-react": "^3.2.11",
+    "@abtnode/cron": "^1.17.5",
+    "@abtnode/util": "^1.17.5",
+    "@aigne/aigne-hub": "^0.10.15",
+    "@aigne/core": "^1.71.0",
+    "@arcblock/did": "^1.27.15",
+    "@arcblock/did-connect-js": "^1.27.15",
+    "@arcblock/did-connect-react": "^3.2.14",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.2.11",
-    "@arcblock/ux": "^3.2.11",
-    "@arcblock/ws": "^1.27.14",
+    "@arcblock/react-hooks": "^3.2.14",
+    "@arcblock/ux": "^3.2.14",
+    "@arcblock/ws": "^1.27.15",
     "@blocklet/ai-runtime": "^0.7.8",
     "@blocklet/aigne-sdk": "^0.7.8",
-    "@blocklet/embed": "^0.3.4",
-    "@blocklet/js-sdk": "^1.17.4-beta-20251204-152224-243ff54f",
-    "@blocklet/logger": "^1.17.4-beta-20251204-152224-243ff54f",
-    "@blocklet/payment-js": "^1.22.29",
-    "@blocklet/sdk": "^1.17.4-beta-20251204-152224-243ff54f",
-    "@blocklet/ui-react": "^3.2.11",
-    "@blocklet/uploader": "^0.3.13",
-    "@blocklet/uploader-server": "^0.3.13",
-    "@blocklet/xss": "^0.3.11",
+    "@blocklet/embed": "^0.3.5",
+    "@blocklet/js-sdk": "^1.17.5",
+    "@blocklet/logger": "^1.17.5",
+    "@blocklet/payment-js": "^1.23.2",
+    "@blocklet/sdk": "^1.17.5",
+    "@blocklet/ui-react": "^3.2.14",
+    "@blocklet/uploader": "^0.3.15",
+    "@blocklet/uploader-server": "^0.3.15",
+    "@blocklet/xss": "^0.3.13",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -71,9 +71,9 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.27.14",
-    "@ocap/mcrypto": "^1.27.14",
-    "@ocap/util": "^1.27.14",
+    "@ocap/client": "^1.27.15",
+    "@ocap/mcrypto": "^1.27.15",
+    "@ocap/util": "^1.27.15",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -171,9 +171,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.2.11",
+    "@arcblock/ux": "^3.2.14",
     "@blocklet/code-editor": "^0.7.8",
-    "@blocklet/ui-react": "^3.2.11",
+    "@blocklet/ui-react": "^3.2.14",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
