--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.1.8",
+  "version": "0.1.9",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -15,7 +15,8 @@
     "upload": "npm run bundle && blocklet upload .blocklet/release/blocklet.json",
     "prepare": "npx simple-git-hooks",
     "bump-version": "zx --quiet scripts/bump-version.mjs",
-    "update:deps": "npx -y taze latest -r -w -n '/@abtnode|@aigne|@arcblock|@blocklet|@did-connect|@did-pay|@did-space|@nft-store|@nft-studio|@ocap|vite-plugin-blocklet/' && pnpm install && pnpm dedupe"
+    "update:deps": "npx -y taze latest -r -w -n '/@abtnode|@aigne|@arcblock|@blocklet|@did-connect|@did-pay|@did-space|@nft-store|@nft-studio|@ocap|vite-plugin-blocklet/' && pnpm install && pnpm dedupe",
+    "verify": "npm run lint && npm run bundle"
   },
   "lint-staged": {
     "*.{mjs,js,jsx,ts,tsx}": [
@@ -39,28 +40,28 @@
     ]
   },
   "dependencies": {
-    "@abtnode/cron": "^1.17.5",
-    "@abtnode/util": "^1.17.5",
+    "@abtnode/cron": "^1.17.7",
+    "@abtnode/util": "^1.17.7",
     "@aigne/aigne-hub": "^0.10.15",
     "@aigne/core": "^1.71.0",
-    "@arcblock/did": "^1.27.15",
-    "@arcblock/did-connect-js": "^1.27.15",
-    "@arcblock/did-connect-react": "^3.2.14",
+    "@arcblock/did": "^1.28.1",
+    "@arcblock/did-connect-js": "^1.28.1",
+    "@arcblock/did-connect-react": "^3.3.10",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.2.14",
-    "@arcblock/ux": "^3.2.14",
-    "@arcblock/ws": "^1.27.15",
-    "@blocklet/ai-runtime": "^0.7.8",
-    "@blocklet/aigne-sdk": "^0.7.8",
+    "@arcblock/react-hooks": "^3.3.10",
+    "@arcblock/ux": "^3.3.10",
+    "@arcblock/ws": "^1.28.1",
+    "@blocklet/ai-runtime": "^0.7.12",
+    "@blocklet/aigne-sdk": "^0.7.12",
     "@blocklet/embed": "^0.3.5",
-    "@blocklet/js-sdk": "^1.17.5",
-    "@blocklet/logger": "^1.17.5",
-    "@blocklet/payment-js": "^1.23.2",
-    "@blocklet/sdk": "^1.17.5",
-    "@blocklet/ui-react": "^3.2.14",
-    "@blocklet/uploader": "^0.3.15",
-    "@blocklet/uploader-server": "^0.3.15",
-    "@blocklet/xss": "^0.3.13",
+    "@blocklet/js-sdk": "^1.17.7",
+    "@blocklet/logger": "^1.17.7",
+    "@blocklet/payment-js": "^1.23.8",
+    "@blocklet/sdk": "^1.17.7",
+    "@blocklet/ui-react": "^3.3.10",
+    "@blocklet/uploader": "^0.3.19",
+    "@blocklet/uploader-server": "^0.3.19",
+    "@blocklet/xss": "^0.3.16",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -71,9 +72,9 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.27.15",
-    "@ocap/mcrypto": "^1.27.15",
-    "@ocap/util": "^1.27.15",
+    "@ocap/client": "^1.28.1",
+    "@ocap/mcrypto": "^1.28.1",
+    "@ocap/util": "^1.28.1",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -153,7 +154,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^7.0.0",
-    "vite-plugin-blocklet": "^0.12.4",
+    "vite-plugin-blocklet": "^0.14.3",
     "vite-plugin-svgr": "^4.3.0",
     "zx": "^7.2.3"
   },
@@ -171,9 +172,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.2.14",
-    "@blocklet/code-editor": "^0.7.8",
-    "@blocklet/ui-react": "^3.2.14",
+    "@arcblock/ux": "^3.3.10",
+    "@blocklet/code-editor": "^0.7.12",
+    "@blocklet/ui-react": "^3.3.10",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
