--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image_smith",
   "private": true,
-  "version": "0.1.9",
+  "version": "0.1.10",
   "scripts": {
     "dev": "blocklet dev",
     "lint": "tsc --noEmit && eslint src api/src --ext .mjs,.js,.jsx,.ts,.tsx",
@@ -42,23 +42,23 @@
   "dependencies": {
     "@abtnode/cron": "^1.17.7",
     "@abtnode/util": "^1.17.7",
-    "@aigne/aigne-hub": "^0.10.15",
-    "@aigne/core": "^1.71.0",
-    "@arcblock/did": "^1.28.1",
-    "@arcblock/did-connect-js": "^1.28.1",
-    "@arcblock/did-connect-react": "^3.3.10",
+    "@aigne/aigne-hub": "^0.10.16-beta.18",
+    "@aigne/core": "^1.72.0-beta.13",
+    "@arcblock/did": "^1.28.4",
+    "@arcblock/did-connect-js": "^1.28.4",
+    "@arcblock/did-connect-react": "^3.4.5",
     "@arcblock/did-connect-storage-nedb": "^1.8.0",
-    "@arcblock/react-hooks": "^3.3.10",
-    "@arcblock/ux": "^3.3.10",
-    "@arcblock/ws": "^1.28.1",
-    "@blocklet/ai-runtime": "^0.7.12",
-    "@blocklet/aigne-sdk": "^0.7.12",
+    "@arcblock/react-hooks": "^3.4.5",
+    "@arcblock/ux": "^3.4.5",
+    "@arcblock/ws": "^1.28.4",
+    "@blocklet/ai-runtime": "^0.7.13",
+    "@blocklet/aigne-sdk": "^0.7.13",
     "@blocklet/embed": "^0.3.5",
     "@blocklet/js-sdk": "^1.17.7",
     "@blocklet/logger": "^1.17.7",
-    "@blocklet/payment-js": "^1.23.8",
+    "@blocklet/payment-js": "^1.24.0",
     "@blocklet/sdk": "^1.17.7",
-    "@blocklet/ui-react": "^3.3.10",
+    "@blocklet/ui-react": "^3.4.5",
     "@blocklet/uploader": "^0.3.19",
     "@blocklet/uploader-server": "^0.3.19",
     "@blocklet/xss": "^0.3.16",
@@ -72,9 +72,9 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
-    "@ocap/client": "^1.28.1",
-    "@ocap/mcrypto": "^1.28.1",
-    "@ocap/util": "^1.28.1",
+    "@ocap/client": "^1.28.4",
+    "@ocap/mcrypto": "^1.28.4",
+    "@ocap/util": "^1.28.4",
     "@types/react-helmet": "^6.1.11",
     "ahooks": "^3.7.11",
     "axios": "^1.6.2",
@@ -154,7 +154,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^7.0.0",
-    "vite-plugin-blocklet": "^0.14.3",
+    "vite-plugin-blocklet": "^0.14.6",
     "vite-plugin-svgr": "^4.3.0",
     "zx": "^7.2.3"
   },
@@ -172,9 +172,9 @@
     "pre-commit": "npx lint-staged"
   },
   "resolutions": {
-    "@arcblock/ux": "^3.3.10",
-    "@blocklet/code-editor": "^0.7.12",
-    "@blocklet/ui-react": "^3.3.10",
+    "@arcblock/ux": "^3.4.5",
+    "@blocklet/code-editor": "^0.7.13",
+    "@blocklet/ui-react": "^3.4.5",
     "@types/d3-dispatch": "3.0.6",
     "@uppy/provider-views": "3.12.0",
     "rimraf": "2.6.3"
